обработка разделенных дорожек в mpd-плагине.

--- a/www/pages/rewind-dat-dual-hash-manager.html
+++ b/www/pages/rewind-dat-dual-hash-manager.html
@@ -30,14 +30,14 @@
 
 		// Url for .dat file
 		// range
-		//var datUrl = '/video/toystory_dash.dat';
-		var datUrl = '/video/toystory_dash-dual.dat';
+		var datUrl = '/video/toystory_dash.dat';
+		//var datUrl = '/video/toystory_dash-dual.dat';
 		
 		// m4s
 		//var datUrl = '/video/manifest-toystory-dual.dat';
 		//var datUrl = '/video/manifest-toystory.dat';
 		
-		// test m4s
+		// test m4s локальные файлы
 		//var datUrl = '/video/test-manifest-toystory-dual.dat';
 		//var datUrl = '/video/test-manifest-toystory.dat';
 
