Правка в структуре данных для hls-mpd

--- a/www/pages/rewind-dat-dual-hash-manager.html
+++ b/www/pages/rewind-dat-dual-hash-manager.html
@@ -32,6 +32,7 @@
 		// range
 		var datUrl = '/video/toystory_dash.dat';
 		//var datUrl = '/video/toystory_dash-dual.dat';
+		//var datUrl = '/video/monaco_dash.dat';
 		
 		// m4s
 		//var datUrl = '/video/manifest-toystory-dual.dat';
@@ -43,6 +44,7 @@
 
 		// Elements
 		var videoElement = document.getElementById('myVideo');
+		
 
 		// Start loading dat:
 		getDataJSON(datUrl);
