правка названия переменных в mpd-dual

--- a/www/pages/rewind-dat-dual-hash-manager.html
+++ b/www/pages/rewind-dat-dual-hash-manager.html
@@ -30,8 +30,8 @@
 
 		// Url for .dat file
 		// range
-		var datUrl = '/video/toystory_dash.dat';
-		//var datUrl = '/video/toystory_dash-dual.dat';
+		//var datUrl = '/video/toystory_dash.dat';
+		var datUrl = '/video/toystory_dash-dual.dat';
 		//var datUrl = '/video/monaco_dash.dat';
 		
 		// m4s
