Прикрутил проверку WebRTC + peer.js

--- a/www/pages/rewind-m4s.html
+++ b/www/pages/rewind-m4s.html
@@ -21,7 +21,9 @@
 	'use strict'
 	
 	// Url for .dat file
-	var datUrl = '/video/manifest-toystory.dat';
+	var datUrl = '/video/test-manifest-toystory-dual.dat';
+	//var datUrl = '/video/manifest-toystory.dat';
+	
 	
 	// Global Parameters from .mpd file
 	var file;  // MP4 file
