--- a/www/pages/video.html
+++ b/www/pages/video.html
@@ -9,8 +9,7 @@
 		<h2>video</h2>
 		<div id="grid">
 			<video width="640" height="360" id="myVideo" controls>
-				
-				<source src="/_diff_video/fox.mp4" type="video/mp4">
+				<source src="/_diff_video/toystory.mp4" type="video/mp4">
 				<!--
 				<source src="/video/monaco_dashinit.mp4" type="video/mp4">
 				<source src="/video/fox6_dashinit.mp4" type="video/mp4">
