обмен данными между клиентами, завел тестовые страницы для hash-manager-peer.js

--- a/www/pages/webrtc-chat.html
+++ b/www/pages/webrtc-chat.html
@@ -6,7 +6,7 @@
 	<title>WebRTC example</title>
 	<script src="/js/jquery-1.10.2.min.js"></script>
 	<script src="/js/peer.js"></script>
-	<script src="/js/script-3.js"></script>
+	<script src="/js/script-webrtc-chat.js"></script>
 </head>
 
 <body>
